# Django_ORM

./: .env.example  .gitignore  pyproject.toml
django_orm/django_orm/: settings.py
django_orm/hr/: models.py
django_orm/hr/migrations/: 0001_initial.py  0002_contact_employee_contact.py  0003_department_employee_department.py  0004_compensation.py  0005_employee_compensations.py  0006_employee_age_employee_created_and_more.py  0007_remove_employee_compensations_and_more.py  0008_employee_about.py
