[tool.poetry]
name = "django-orm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg = {extras = ["binary"], version = "^3.1.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
